<resources>
    <string name="app_name">eCART</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="Email">Email</string>
    <string name="Register">Register</string>
    <string name="Method">Method</string>
    <string name="ChangePass">Change password</string>
    <string name="ChangeAv">Change avatar</string>
    <string name="NewPsw">New password</string>
    <string name="OldPsw">Current password</string>
    <string name="ConfirmPsw">Confirm password</string>
    <string name="Welcome">Welcome to eCart!</string>
    <string name="LogAcc">Enter into your account</string>
    <string name="RegAcc">If you don\'t have one, register now!</string>
    <string name="FavCat">Choose your favorite category</string>
    <string name="Rate">Rate</string>
    <string name="Review">Write a review</string>
    <string name="SendRvw">Submit review</string>
    <string name="SeaCat">Search for category</string>
    <string name="PopularProducts">Popular Products</string>
    <string name="SaleProducts">Sale Products</string>
    <string name="AllProducts">All Products</string>
    <string name="CategoryProducts">Category Products</string>
    <string name="Search">Search product name</string>
    <string name="Submit">Submit</string>
    <string name="Transaction">Your transaction</string>
    <string name="PayMessage">You will pay</string>
    <string name="Confirm">Confirm</string>
    <string name="Deny">Deny</string>
</resources>