<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterFragment"
    android:background="@color/Tavolozza5">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/Username"
        android:layout_gravity="center"
        android:layout_marginBottom="300dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginBottom="220dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_marginBottom="140dp"/>

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/Surname"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginBottom="-20dp"/>

    <EditText
        android:id="@+id/editTextPayment"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/Method"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_marginBottom="-100dp"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:layout_marginTop="220dp"
        android:layout_gravity="center"
        android:backgroundTint="@drawable/loginbutton" />
</FrameLayout>