<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ProfileFragment"
    android:background="@color/Tavolozza4">


    <androidx.cardview.widget.CardView
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_gravity="center"
        android:layout_marginBottom="240dp"
        app:cardCornerRadius="250dp"
        app:cardBackgroundColor="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icon_user_image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewU"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewE"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewM"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-40dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewF"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-100dp"
        android:hint="@string/FavCat"
        android:textSize="16sp" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/buttonPass"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="230dp"
        android:backgroundTint="@drawable/changebutton"
        android:text="@string/ChangePass" />

    <Button
        android:id="@+id/buttonTransaction"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:backgroundTint="@drawable/changebutton"
        android:text="@string/Transaction" />



</FrameLayout>